# STRDenovoTools

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile.am  MonSTRConfig.h.in  README.md  configure.ac  family.ped  pg_pedigree.fam  ratio.py  reconf  test.sh  test_chrX.sh  test_examine.sh  test_gangstr.sh  test_naive.sh  valgrind.sh
TestData/: Q3.filtered.loclog.tab  Q3.filtered.vcf.gz.tbi  Q3.ped  TestData.md  TestQuadFam.model.all_mutations.tab  TestQuadFam.model.locus_summary.tab  TestQuadFam.naive.all_mutations.tab  TestQuadFam.samplog.tab
cmake/: google_test.cmake
lib/: CMakeLists.txt  common.cpp  denovo_allele_priors.cpp  denovo_scanner.cpp  denovo_scanner.h  locus_inspector.cpp  mathops.cpp  mathops.h  mutation_priors.h  options.cpp  options.h  pedigree.cpp  pedigree.h  region.cpp  vcf_input.cpp  vcf_input.h  vcf_reader.cpp  vcf_reader.h
lib/tests/: CMakeLists.txt  CommonTest.cpp  DenovoScannerTest.cpp
monstr/: CMakeLists.txt  common.h  denovo_allele_priors.h  denovo_scanner.cpp  locus_inspector.h  mathops.cpp  mathops.h  mutation_model.cpp  mutation_model.h  mutation_priors.cpp  pedigree.h  region.h  vcf_reader.cpp  vcf_reader.h
scripts/: qc_denovos.py  test_qc_denovos.sh
src/: Makefile.am  common.cpp  common.h  denovo_allele_priors.cpp  denovo_allele_priors.h  denovo_scanner.cpp  denovo_scanner.h  locus_inspector.cpp  locus_inspector.h  main_examine.cpp  main_sdt.cpp  mathops.cpp  mutation_model.cpp  mutation_model.h  mutation_priors.cpp  options.cpp  options.h  pedigree.cpp  pedigree.h  region.cpp  region.h  vcf_input.cpp  vcf_input.h  vcf_reader.cpp  vcf_reader.h
